fix about page mobile text align style

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -92,4 +92,7 @@
   .about-section .primary {
     display: block;
   }
+  .about-text__text {
+    text-align: left;
+  }
 }
